refactor separate common entities from logic + on death reset entities